# vidinsight

./: .env.local.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
app/: layout.tsx  (+4 more)
backend/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 465aaa428169_widen_video_transcript_column.py  5cc862a0995a_add_users_table.py  7281df2cb4e1_initial_schema.py
backend/app/api/: __init__.py  factory.py  router_registry.py
backend/app/core/: __init__.py  config.py  errors.py
backend/app/integrations/: youtube.py
backend/app/lib/: ai_processing.py  quote_matcher.py  timestamp_utils.py  topic_utils.py
backend/app/modules/: common.py
backend/app/modules/auth/: middleware.py  rate_limiter.py  router.py  schemas.py  service.py
backend/app/modules/health/: router.py
backend/app/modules/models/: router.py
backend/app/modules/video/: errors.py  router.py  schemas.py  service.py  use_cases.py
backend/app/prompts/: translation.py  video.py
backend/app/providers/: __init__.py  base.py  registry.py  retry.py
backend/app/providers/text/: __init__.py  claude.py  deepseek.py  qwen.py
backend/app/repositories/: conversation_message.py  schema.py  user.py  video_metadata.py  video_note.py
backend/app/schemas/: __init__.py  shared.py  video.py
backend/app/services/: __init__.py  translation.py  video.py
backend/tests/: test_config_settings.py  test_video_backend_api.py
(+236 files in other folders)
